# nunu-cli

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  build.rs  clippy.toml  config.example.json  deny.toml  flake.nix  justfile  release.toml  taplo.toml
.cargo/: audit.toml
.github/workflows/: build.yml
src/: ci_metadata.rs  config.rs  error.rs  file_config.rs  lib.rs  metadata.rs
src/api/: client.rs  mod.rs
src/upload/: mod.rs  multipart.rs  single.rs
tests/: dummy.rs
