[package]
name = "nunu-rust-template"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nunu_rust_template"
path = "src/lib.rs"

[[bin]]
name = "nunu-rust-template"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
# sentry = { version = "0.38.1", features = ["backtrace", "contexts"] }
sentry = { version = "0.38.1", default-features = false, features = [
  "backtrace",
  "contexts",
  "panic",
  "anyhow",
  "debug-images",
  "log",
  "reqwest",
  "rustls",
] }
thiserror = "2.0.12"
