[package]
name = "nunu-cli"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nunu_cli"
path = "src/lib.rs"

[[bin]]
name = "nunu-cli"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
aws-config = { version = "1.8.3", default-features = false, features = [
  "rustls",
  "rt-tokio",
] }
aws-sdk-s3 = { version = "1.100.0", default-features = false, features = [
  "rustls",
  "rt-tokio",
] }
clap = { version = "4.5.49", features = ["derive", "env"] }
env = "1.0.1"
env_logger = "0.11.8"
futures = "0.3"
log = "0.4.17"
reqwest = { version = "0.12.19", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }

dotenvy = "0.15"
indicatif = "0.18.0"

[lints.clippy]
expect_used = "warn"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
