[package]
name = "nunu-cli"
version = "0.1.19"
edition = "2024"
publish = false
authors = ["Nunu.ai"]
description = "CLI tool for uploading build artifacts to Nunu.ai"
homepage = "https://nunu.ai"
repository = "https://github.com/nunu-ai/nunu-cli"
license = "MIT OR Apache-2.0"
keywords = ["cli", "upload", "build", "artifacts", "deployment"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nunu_cli"
path = "src/lib.rs"

[[bin]]
name = "nunu-cli"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.38", features = ["derive", "env"] }
directories = "5.0"
dotenvy = "0.15"
env = "1.0.1"
env_logger = "0.11.8"
futures = "0.3"
glob = "0.3.3"
hyper = "1.6"
indicatif = "0.18.0"
log = "0.4.17"
reqwest = { version = "0.12.19", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
  "stream",
] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "signal",
  "sync",
  "io-util",
] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2.5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[lints.clippy]
expect_used = "warn"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

# cargo-release configuration
[package.metadata.release]
pre-release-hook = [
  "sh",
  "-c",
  "convco changelog --unreleased {{version}} --prefix v --skip-empty -o CHANGELOG.md && git add CHANGELOG.md",
]
tag-name = "v{{version}}"
tag-message = "chore: release nunu-cli version {{version}}"
pre-release-commit-message = "chore: release nunu-cli v{{version}}"
publish = false
allow-branch = ["main"]
